--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             const url = document.getElementById("url").value;
             document.getElementById("status").innerText = "Baixando...";
 
-            axios.post("http://localhost:5000/download", { url })
+            axios.post("https://video-downloader.onrender.com/download", { url })
                 .then(response => {
                     document.getElementById("status").innerHTML = 
                         `<a href="http://localhost:5000/videos/${response.data.file}" download>Baixar Vídeo</a>`;
